[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/utilityScripts/Hurtbox.gd" type="Script" id=1]

[node name="Hurtbox" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="hit_timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_Hurtbox_area_entered"]
[connection signal="timeout" from="hit_timer" to="." method="_on_hit_timer_timeout"]
